modify src to coder.js

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                <i class="nes-icon linkedin is-large"></i>
              </section>      
      </footer>
-     <script src="criptro.js"></script>
+     <script src="coder.js"></script>
      
 </body>
 </html>
