adding links to footer and logo alura

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
      <header>
           <nav class="nes-container with-title is-centered">
-               <img src="" alt="Logo de aulora">
+               <img src="img/logo.png" alt="Logo de aulora">
                <h2 class="title">Encriptador AULORA</h2>
                <label for="default_select">Tema</label>
                <div class="nes-select tema">
                     <select required id="default_select">
-                         <option value="" disabled selected hidden></option>
+                         <option value="0" disabled selected hidden></option>
                          <option value="0">Claro</option>
                          <option value="1">Obscuro</option>
                     </select>
@@ -37,9 +37,9 @@
      </main>
      <footer>
           <section class="icon-list">
-               <i class="nes-icon instagram is-large"></i>
-               <i class="nes-icon github is-large"></i>
-               <i class="nes-icon linkedin is-large"></i>
+               <a href="https://www.instagram.com/_bry.sr_/"><i class="nes-icon instagram is-large"></i></a>
+               <a href="https://github.com/xVrzBx/AluraCodificador"><i class="nes-icon github is-large"></i></a>
+               <a href="www.linkedin.com/in/bryan-castro-progrmador"><i class="nes-icon linkedin is-large"></i></a>
              </section>      
      </footer>
      <script src="coder.js"></script>
