fixed linkedin link

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <section class="icon-list">
                <a href="https://www.instagram.com/_bry.sr_/"><i class="nes-icon instagram is-large"></i></a>
                <a href="https://github.com/xVrzBx/AluraCodificador"><i class="nes-icon github is-large"></i></a>
-               <a href="www.linkedin.com/in/bryan-castro-progrmador"><i class="nes-icon linkedin is-large"></i></a>
+               <a href="https://www.linkedin.com/in/bryan-castro-programador/"><i class="nes-icon linkedin is-large"></i></a>
              </section>      
      </footer>
      <script src="coder.js"></script>
