stating responsive display with pc's width and a little of styles

--- a/index.html
+++ b/index.html
@@ -22,21 +22,26 @@
              </nav>
      </header>
      <main>
-          <div class="nes-container with-title part">
+          <div class="nes-container with-title ">
                <p class="title">Container.is-dark</p>
                <input type="text" class="nes-input" placeholder="Your text goes here" id="inputText">
-               <button type="button" class="nes-btn is-primary" onclick="encript()">Encriptar</button>
-               <button type="button" class="nes-btn is-disabled">Desencriptar</button>
+               <div class="btn">
+                    <button type="button" class="nes-btn is-primary" onclick="encript()">Encriptar</button>
+                    <button type="button" class="nes-btn is-disabled">Desencriptar</button>
+               </div>
+               
           </div>
-          <div class="nes-container with-title part">
+          <div class="nes-container with-title ">
                <p class="title">Container.is-dark</p>
                <textarea id="textarea_field" class="nes-textarea"  placeholder="Result"></textarea> 
-               <button type="button" class="nes-btn is-primary" onclick="copyText()">Copiar texto</button>
+               <div class="btn">
+                    <button type="button" class="nes-btn is-primary" onclick="copyText()">Copiar texto</button>
+               </div>
           </div>
 
      </main>
      <footer>
-          <section class="icon-list">
+          <section class="icon-list nes-container">
                <a href="https://www.instagram.com/_bry.sr_/"><i class="nes-icon instagram is-large"></i></a>
                <a href="https://github.com/xVrzBx/AluraCodificador"><i class="nes-icon github is-large"></i></a>
                <a href="https://www.linkedin.com/in/bryan-castro-programador/"><i class="nes-icon linkedin is-large"></i></a>
