making responsive tablet width

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                <p class="title">Container.is-dark</p>
                <textarea id="textarea_field" class="nes-textarea"  placeholder="Result"></textarea> 
                <div class="btn">
-                    <button type="button" class="nes-btn is-primary" onclick="copyText()">Copiar texto</button>
+                    <button type="button" class="nes-btn is-success" onclick="copyText()">Copiar texto</button>
                </div>
           </div>
 
