fixed problems with responsive

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
      <header>
-          <nav class="nes-container with-title is-centered">
+          <nav class="nes-container">
                <img src="img/logo.png" alt="Logo de aulora">
                <h2 class="title">Encriptador AULORA</h2>
                <label for="default_select">Tema</label>
@@ -23,7 +23,7 @@
      </header>
      <main>
           <div class="nes-container with-title ">
-               <p class="title">Container.is-dark</p>
+               <p class="title">Entrada</p>
                <input type="text" class="nes-input" placeholder="Your text goes here" id="inputText">
                <div class="btn">
                     <button type="button" class="nes-btn is-primary" onclick="encript()">Encriptar</button>
@@ -31,8 +31,8 @@
                </div>
                
           </div>
-          <div class="nes-container with-title ">
-               <p class="title">Container.is-dark</p>
+          <div class="nes-container with-title">
+               <p class="title">Salida</p>
                <textarea id="textarea_field" class="nes-textarea"  placeholder="Result"></textarea> 
                <div class="btn">
                     <button type="button" class="nes-btn is-success" onclick="copyText()">Copiar texto</button>
