fixing selector responsive

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                <label for="default_select">Tema</label>
                <div class="nes-select tema">
                     <select required id="default_select">
-                         <option value="0" disabled selected hidden></option>
+                         <option id="opt" value="0" disabled selected hidden></option>
                          <option value="0">Claro</option>
                          <option value="1">Obscuro</option>
                     </select>
