enable decode button

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                <input type="text" class="nes-input" placeholder="Your text goes here" id="inputText">
                <div class="btn">
                     <button type="button" class="nes-btn is-primary" onclick="encript()">Encriptar</button>
-                    <button type="button" class="nes-btn is-disabled">Desencriptar</button>
+                    <button type="button" class="nes-btn is-warning" onclick="decript()">Desencriptar</button>
                </div>
                
           </div>
