change input for textarea

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
      <main>
           <div class="nes-container with-title ">
                <p class="title">Entrada</p>
-               <input type="text" class="nes-input" placeholder="Your text goes here" id="inputText">
+               <textarea type="text" class="nes-input" placeholder="Your text goes here" id="inputText"></textarea>
                <div class="btn">
                     <button type="button" class="nes-btn is-primary" onclick="encript()">Encriptar</button>
                     <button type="button" class="nes-btn is-warning" onclick="decript()">Desencriptar</button>
