--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
      <header>
           <nav class="nes-container">
                <img src="img/logo.png" alt="Logo de aulora">
-               <h2 class="title">Encriptador AULORA</h2>
+               <h2 class="title">Encriptador ALURA</h2>
                <label for="default_select">Tema</label>
                <div class="nes-select tema">
                     <select required id="default_select">
